--- a/sample-viewer/src/app/add-samples/check-dupes/check-dupes.component.html
+++ b/sample-viewer/src/app/add-samples/check-dupes/check-dupes.component.html
@@ -1,17 +1,15 @@
-
-
 <div *ngIf="data && data.length > 0">
-<div class="duplicate-helper-text">
+  <div class="duplicate-helper-text">
 
-  <p>
-    The number of aliquots for the duplicate sampleID/location pair(s) will be combined. The <span class="row-keep">first row of data -- shown in
+    <p>
+      The number of aliquots for the duplicate sampleID/location pair(s) will be combined. The <span class="row-keep">first row of data -- shown in
     green-- will be saved</span> (with a sum of the totalAliquots), and the <span class="row-delete">other rows (in red) will be deleted</span>.
-  </p>
+    </p>
 
-  <p>
-    If you want to keep them as separate samples, change the sample label for one (so it will have a new sampleID generated).
-  </p>
-</div>
+    <p>
+      If you want to keep them as separate samples, change the sample label for one (so it will have a new sampleID generated).
+    </p>
+  </div>
 
   <div class="preview-sample">
     <table mat-table [dataSource]="dataSource" matSort id="preview_samples">
@@ -27,8 +25,8 @@
       <ng-container matColumnDef="samples">
         <th mat-header-cell *matHeaderCellDef>samples</th>
         <td mat-cell *matCellDef="let element" class="sample">
-            <app-preview-samples [data]="element.samples" [showPagination]="false" [displayedColumns]="sampleColumns" class="sample-preview">
-            </app-preview-samples>
+          <app-preview-samples [data]="element.samples" [hidePagination]="true" [displayedColumns]="sampleColumns" class="sample-preview">
+          </app-preview-samples>
         </td>
       </ng-container>
 
@@ -37,7 +35,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[10, 20, 100]" [pageSize]="20" showFirstLastButtons></mat-paginator>
+  </div>
+</div>
 
-</div>
-</div>
+<mat-paginator [pageSizeOptions]="[10, 20, 100]" [pageSize]="20" showFirstLastButtons></mat-paginator>
