--- a/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
+++ b/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
@@ -1,3 +1,3 @@
 <h2><span class="stepper-title">Preview additions</span></h2>
 
-<app-preview-samples [data]="previewData" *ngIf="previewData && previewData.length > 0"></app-preview-samples>
+<app-preview-samples [data]="previewData"></app-preview-samples>
