--- a/sample-viewer/src/app/add-samples/combine-dupes/combine-dupes.component.html
+++ b/sample-viewer/src/app/add-samples/combine-dupes/combine-dupes.component.html
@@ -2,15 +2,18 @@
   <div class="duplicate-helper-text">
 
     <p>
-      Fix the metadata so they agree with each other and re-load the data.
+      The number of aliquots for the duplicate sampleID/location pair(s) will be combined. The metadata in the <span class="row-keep">first row of data -- shown in
+    green-- will be saved</span> (with a sum of the totalAliquots), and the <span class="row-delete">other rows (in red) will be deleted</span>.
     </p>
 
     <p class="emphasis">
       If you want to keep them as separate samples, change the sample label for one (so it will have a new sampleID generated) and re-upload.
     </p>
 
+    <p class="emphasis">
+      If the extra row(s) is a mistake, delete the extra row(s) and re-upload.
+    </p>
   </div>
-
 
   <div class="preview-sample">
     <table mat-table [dataSource]="dataSource" matSort id="preview_samples">
@@ -22,20 +25,11 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="disagreements">
-        <th mat-header-cell *matHeaderCellDef>disagreements</th>
-        <td mat-cell *matCellDef="let element" class="message">
-          <div *ngFor="let problem of element.disagreements">
-            {{ problem.column }}
-          </div>
-        </td>
-      </ng-container>
-
 
       <ng-container matColumnDef="samples">
         <th mat-header-cell *matHeaderCellDef>samples</th>
-        <td mat-cell *matCellDef="let element" class="sample">
-          <app-preview-samples [data]="element.samples" [hidePagination]="true" [displayedColumns]="sampleColumns" class="sample-preview" [highlightCols]="element.highlight">
+        <td mat-cell *matCellDef="let element" class="sample-combine">
+          <app-preview-samples [data]="element.samples" [hidePagination]="true" [displayedColumns]="sampleColumns" class="sample-preview">
           </app-preview-samples>
         </td>
       </ng-container>
