--- a/sample-viewer/src/app/add-samples/frontend-sample-validation/frontend-sample-validation.component.scss
+++ b/sample-viewer/src/app/add-samples/frontend-sample-validation/frontend-sample-validation.component.scss
@@ -1,10 +1,14 @@
 @import '../../../sass/variables.scss';
 @import "../../../sass/material-theme.scss";
-
+// Error banner
 .validation-error {
-  background: accent-redder(A700);
+  background: accent-redder(500);
   color: white;
   padding: 5px;
+
+  &.fatal {
+    background: accent-redder(A700);
+  }
 }
 
 .verified {
@@ -22,6 +26,11 @@
   color: accent-redder(A700);
   // color: white;
   // padding: 5px;
+}
+
+.needs-verification {
+  font-size: 1.25em;
+  color: accent-redder(500);
 }
 
 .next-buttons {
