--- a/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
@@ -5,7 +5,24 @@
     font-weight: 400;
 }
 
+.highlight {
+  color: accent-redder(A700);
+  font-weight: 400;
+}
+
 td.mat-cell, th.mat-header-cell {
     padding: 2px 10px;
     text-align: center;
+}
+
+
+// Locations
+.lab {
+  font-weight: 400;
+}
+
+.location-group {
+  padding: 5px 10px;
+  margin: 10px;
+  background: $grey-50;
 }
