--- a/sample-viewer/src/app/add-samples/upload-stepper/upload-stepper.component.html
+++ b/sample-viewer/src/app/add-samples/upload-stepper/upload-stepper.component.html
@@ -1,4 +1,4 @@
- Form Status: {{ firstFormGroup.status }}
+ <!-- Form Status: {{ firstFormGroup.status }} -->
 
 <!-- <form [formGroup]="formGroup"> -->
 <mat-horizontal-stepper linear #sample_upload_stepper>
