hide paginator if no data

--- a/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.html
+++ b/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.html
@@ -55,4 +55,4 @@
 
 </div>
 
-<mat-paginator [pageSizeOptions]="[10, 20, 100]" [pageSize]="20" showFirstLastButtons [hidden]="hidePagination"></mat-paginator>
+<mat-paginator [pageSizeOptions]="[10, 20, 100]" [pageSize]="20" showFirstLastButtons [hidden]="hidePagination" [ngClass]="{'hide-pagination': hidePagination}"></mat-paginator>
