--- a/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
@@ -26,3 +26,7 @@ td.mat-cell, th.mat-header-cell {
   margin: 10px;
   background: $grey-50;
 }
+
+.hide-pagination {
+  display: none !important;
+}
