--- a/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
+++ b/sample-viewer/src/app/add-samples/preview-additions/preview-additions.component.html
@@ -1,4 +1,4 @@
-<h2><span class="stepper-title">Preview additions</span></h2>
+<h2><span class="stepper-title">Preview additions to database</span></h2>
 
 <div *ngIf="previewData && previewData.length > 0; else no_data">
   <p>
