--- a/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
+++ b/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.html
@@ -1,5 +1,5 @@
 <div class="stepper-header">
-  <h2><span class="stepper-title">Review changes to data in database</span></h2>
+  <h2><span class="stepper-title">Review changes to database</span></h2>
 
   <div class="helper-text" *ngIf="dataSource && dataSource.data.length > 0">
     <p>
