--- a/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-differences/preview-differences.component.scss
@@ -55,3 +55,7 @@ $old-color: accent-redder(600);
     background:  lighten(#cfe9d4, 10%)
   }
 }
+
+.hide-pagination {
+  display: none !important;
+}
