--- a/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
+++ b/sample-viewer/src/app/add-samples/preview-samples/preview-samples.component.scss
@@ -1,8 +1,8 @@
 @import "../../../sass/material-theme.scss";
 
 .mat-column-missing {
-    color: accent-redder(500);
-    font-weight: 400;
+  color: accent-redder(500);
+  font-weight: 400;
 }
 
 .highlight {
@@ -10,11 +10,16 @@
   font-weight: 400;
 }
 
-td.mat-cell, th.mat-header-cell {
-    padding: 2px 10px;
-    text-align: center;
+// Center text in table
+td.mat-cell,
+th.mat-header-cell {
+  padding: 2px 10px;
+  text-align: center;
 }
 
+/deep/ .table-header .mat-sort-header-container {
+  justify-content: center !important;
+}
 
 // Locations
 .lab {
