update helper text

--- a/sample-viewer/src/app/add-samples/check-ids/check-ids.component.html
+++ b/sample-viewer/src/app/add-samples/check-ids/check-ids.component.html
@@ -30,7 +30,7 @@
       </ng-container>
 
       <ng-container matColumnDef="id_check.id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">corrected ID</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear="true">corrected patientID</th>
         <td mat-cell *matCellDef="let element" class="patient-id new-id">
           {{ element.id_check.id }}
         </td>
