--- a/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
+++ b/sample-viewer/src/app/patient-page/patient-elisas/patient-elisas.component.html
@@ -15,6 +15,13 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="timepoint">
+        <th mat-header-cell *matHeaderCellDef>timepoint</th>
+        <td mat-cell *matCellDef="let element" class="message" class="timepoint">
+          {{ element.timepoint }}
+        </td>
+      </ng-container>
+
 
       <ng-container *ngFor="let key of test_types" [matColumnDef]="key">
 
