initial data call to filter timepoints

--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -22,6 +22,10 @@
     <app-filter-sample-type></app-filter-sample-type>
   </div>
 
+  <div class="filter-item filter-sample-type">
+    <app-filter-sample-timepoints></app-filter-sample-timepoints>
+  </div>
+
    <!-- <div class="filter-item filter-patients">
     <app-filter-patient-id [all_patients]="all_patients" [patients]="patients" endpoint="sample"></app-filter-patient-id>
   </div> -->
