move filter-sample-year --> filterable-histogram

--- a/sample-viewer/src/app/filters/filter-sample-timepoints/filter-sample-timepoints.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-timepoints/filter-sample-timepoints.component.html
@@ -4,5 +4,5 @@
   <div class="container">
 
   </div>
-  <app-filter-sample-year [data]="data" [yearDomain]="[1,2,3,4]" [endpoint]="'sample'" *ngIf="data"></app-filter-sample-year>
+  <app-filterable-histogram [data]="data" [yearDomain]="[1,2,3,4]" [endpoint]="'sample'" [filter_title]="filter_title"></app-filterable-histogram>
 </div>
