--- a/sample-viewer/src/app/filters/filter-sample-year/filter-sample-year.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-year/filter-sample-year.component.html
@@ -1,5 +1,1 @@
-<div class="patient-id-filter container">
-  <h4 class="filter-label" *ngIf="data">sample year</h4>
-
-  <div class="year-hist" #hist></div>
-</div>
+<app-filterable-histogram [data]="data" [yearDomain]="yearDomain" [endpoint]="endpoint" [filter_title]="filter_title"></app-filterable-histogram>
