--- a/sample-viewer/src/app/filters/filter-sample-timepoints/filter-sample-timepoints.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-timepoints/filter-sample-timepoints.component.html
@@ -1,1 +1,1 @@
-<app-filterable-histogram [data]="data" [yearDomain]="[1,2,3,4]" [endpoint]="'sample'" [filter_title]="filter_title"></app-filterable-histogram>
+<app-filterable-histogram [data]="data" [xDomain]="freqDomain" [endpoint]="endpoint" [filter_title]="filter_title"></app-filterable-histogram>
