--- a/sample-viewer/src/app/filters/filter-sample-year/filter-sample-year.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-year/filter-sample-year.component.html
@@ -1,1 +1,1 @@
-<app-filterable-histogram [data]="data" [yearDomain]="yearDomain" [endpoint]="endpoint" [filter_title]="filter_title"></app-filterable-histogram>
+<app-filterable-histogram [data]="data" [xDomain]="yearDomain" [endpoint]="endpoint" [filter_title]="filter_title"></app-filterable-histogram>
