--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="filter-item filter-sample-type">
-    <app-filter-sample-timepoints></app-filter-sample-timepoints>
+    <app-filter-sample-timepoints [endpoint]="'sample'"></app-filter-sample-timepoints>
   </div>
 
    <!-- <div class="filter-item filter-patients">
@@ -39,7 +39,7 @@
   </div> -->
 
   <!-- <div class="filter-item filter-dates">
-    <app-filter-sample-year [data]="" [yearDomain]="" endpoint="sample"></app-filter-sample-year>
+    <app-filter-sample-year [data]="" [xrDomain]="" endpoint="sample"></app-filter-sample-year>
   </div>
 
   <div class="filter-item filter-expts">
