fix initial conditions for delayed data arrival

--- a/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.scss
+++ b/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.scss
@@ -1,7 +1,7 @@
 @import '../../../sass/variables.scss';
 @import '../../../sass/material-theme.scss';
 
-.year-hist {
+.filterable-hist {
   display: flex;
   flex-direction: column;
   // .axis--x line,
