--- a/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
+++ b/sample-viewer/src/app/sample/filter-sample/filter-sample.component.html
@@ -22,7 +22,7 @@
     <app-filter-sample-type></app-filter-sample-type>
   </div>
 
-  <div class="filter-item filter-sample-type">
+  <div class="filter-item filter-sample-timepoints">
     <app-filter-sample-timepoints [endpoint]="'sample'"></app-filter-sample-timepoints>
   </div>
 
