--- a/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
+++ b/sample-viewer/src/app/patient/filter-patients/filter-patients.component.html
@@ -31,6 +31,11 @@
     <app-filter-sample-year [data]="patientSummary.patientYears" [yearDomain]="all_years" endpoint="patient"></app-filter-sample-year>
   </div>
 
+
+  <div class="filter-item filter-timepoints">
+    <app-filter-sample-timepoints endpoint="patient"></app-filter-sample-timepoints>
+  </div>
+
   <div class="filter-item filter-expts">
     <!-- <app-filter-experiment [expts]="patientSummary.exptTypes"></app-filter-experiment> -->
   </div>
