hist limits as input

--- a/sample-viewer/src/app/filters/filter-sample-year/filter-sample-year.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-year/filter-sample-year.component.html
@@ -1,1 +1,3 @@
-<app-filterable-histogram [data]="data" [xDomain]="yearDomain" [endpoint]="endpoint" [filter_title]="filter_title"></app-filterable-histogram>
+<app-filterable-histogram [data]="data" [xDomain]="yearDomain"
+[filterSubject] = "filterSubject" [filterState$] = "filterState$"
+[endpoint]="endpoint" [filter_title]="filter_title"></app-filterable-histogram>
