--- a/sample-viewer/src/app/filters/filter-sample-timepoints/filter-sample-timepoints.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-timepoints/filter-sample-timepoints.component.html
@@ -1,1 +1,3 @@
-<app-filterable-histogram [data]="data" [xDomain]="freqDomain" [endpoint]="endpoint" [filter_title]="filter_title"></app-filterable-histogram>
+<app-filterable-histogram [data]="data" [xDomain]="freqDomain" [endpoint]="endpoint"
+[filterSubject] = "filterSubject" [filterState$] = "filterState$"
+[filter_title]="filter_title"></app-filterable-histogram>
