fix filter banner css

--- a/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
+++ b/sample-viewer/src/app/filters/filter-elisas/filter-elisas.component.html
@@ -1,4 +1,4 @@
-<div class="filter filter-expts">
+<div class="filter filter-expts container-column">
   <h4 class="filter-label">ELISA result</h4>
 
 
