--- a/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.html
+++ b/sample-viewer/src/app/filters/filter-experiment/filter-experiment.component.html
@@ -1,4 +1,4 @@
-<div class="filter filter-expts" *ngIf="expts">
+<div class="filter filter-expts container-column" *ngIf="expts">
   <h4 class="filter-label">experiment type</h4>
 
   <div class="expt-container">
