--- a/sample-viewer/src/app/filters/filter-file-type/filter-file-type.component.html
+++ b/sample-viewer/src/app/filters/filter-file-type/filter-file-type.component.html
@@ -1,4 +1,4 @@
-<div class="filter filter-files">
+<div class="filter filter-files container-column">
   <h4 class="filter-label">file type</h4>
 
   <!-- <ng-container *ngFor="let type of types">
