--- a/sample-viewer/src/app/filters/filter-lab/filter-lab.component.html
+++ b/sample-viewer/src/app/filters/filter-lab/filter-lab.component.html
@@ -1,4 +1,4 @@
-<div class="filter-lab container">
+<div class="filter-lab container-column">
   <h4 class="filter-label">sample location</h4>
 
   <div class="container">
