--- a/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-id/filter-patient-id.component.html
@@ -1,4 +1,4 @@
-<div class="patient-id-filter container">
+<div class="patient-id-filter container-column">
   <h4 class="filter-label">patient IDs</h4>
 
   <div class="container">
