--- a/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
+++ b/sample-viewer/src/app/filters/filter-patient-type/filter-patient-type.component.html
@@ -1,4 +1,4 @@
-<div class="patient-type-filter container" *ngIf="viruses && outcomes">
+<div class="patient-type-filter container-column" *ngIf="viruses && outcomes">
   <h4 class="filter-label">patient type</h4>
 
   <div class="filter-subtype filter-virus">
