--- a/sample-viewer/src/app/filters/filter-sample-type/filter-sample-type.component.html
+++ b/sample-viewer/src/app/filters/filter-sample-type/filter-sample-type.component.html
@@ -1,4 +1,4 @@
-<div class="filter-sample-type container">
+<div class="filter-sample-type container-column">
   <h4 class="filter-label">sample type</h4>
 
   <div class="container">
