--- a/sample-viewer/src/app/filters/filter-species/filter-species.component.html
+++ b/sample-viewer/src/app/filters/filter-species/filter-species.component.html
@@ -1,4 +1,4 @@
-<div class="filter-species container">
+<div class="filter-species container-column">
   <h4 class="filter-label">species</h4>
 
   <div class="container species-list">
