--- a/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.html
+++ b/sample-viewer/src/app/filters/filterable-histogram/filterable-histogram.component.html
@@ -1,4 +1,4 @@
-<div class="patient-id-filter container">
+<div class="histogram-filter container-column">
   <h4 class="filter-label" *ngIf="data">{{ filter_title }}</h4>
 
   <div class="filterable-hist" #hist></div>
